--- a/characterCreator/index.html
+++ b/characterCreator/index.html
@@ -152,7 +152,7 @@
           <div class="dropdown-menu">
             <table class="table-sm table-striped table-hover">
               <tbody  class="">
-                <tr ng-repeat="race in races | orderBy: 'name'" ng-click="data.char.class.race = race;" class="dropdown-item">
+                <tr ng-repeat="race in races | orderBy: 'name'" ng-click="data.char.race = race;" class="dropdown-item">
                   <td><strong>{{race.name}}</strong></td>
                   <td ng-repeat="(key, data) in race.ability[0]">
                     <span ng-if="key != 'choose'">[{{key}} +{{data}}]</span>
@@ -166,7 +166,7 @@
             </table>
           </div>
         </div>
-        <input type="text" class="form-control" aria-label="Text input with dropdown button" ng-model="data.char.class.race.name" readonly>
+        <input type="text" class="form-control" aria-label="Text input with dropdown button" ng-model="data.char.race.name" readonly>
       </div>
 
     </div> <!-- End of Row -->
